--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@next/font": "^14.2.15",
+    "axios": "^1.12.2",
+    "mysql2": "^3.15.0",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0"
